Colors and default width/height

--- a/src/controller/controllerdialog.ui
+++ b/src/controller/controllerdialog.ui
@@ -61,7 +61,7 @@
         <x>0</x>
         <y>0</y>
         <width>387</width>
-        <height>1265</height>
+        <height>1282</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -444,26 +444,6 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
-          <widget class="QPushButton" name="defaultBackgroundViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
          <item row="2" column="0">
           <widget class="QPushButton" name="defaultForegroundButton">
            <property name="text">
@@ -527,183 +507,10 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <widget class="QPushButton" name="defaultForegroundViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
+         <item row="11" column="0">
+          <widget class="QPushButton" name="selectionTextColorButton">
            <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="1">
-          <widget class="QPushButton" name="gridColorViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="1">
-          <widget class="QPushButton" name="horizontalDefaultBackgroundViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="1">
-          <widget class="QPushButton" name="horizontalDefaultForegroundViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="1">
-          <widget class="QPushButton" name="horizontalGridColorViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="7" column="1">
-          <widget class="QPushButton" name="verticalDefaultBackgroundViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="8" column="1">
-          <widget class="QPushButton" name="verticalDefaultForegroundViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="9" column="1">
-          <widget class="QPushButton" name="verticalGridColorViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="10" column="1">
-          <widget class="QPushButton" name="selectionColorViewButton">
-           <property name="maximumSize">
-            <size>
-             <width>25</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="text">
-            <string/>
-           </property>
-           <property name="icon">
-            <iconset resource="../../Resources.qrc">
-             <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
+            <string>Selection text color</string>
            </property>
           </widget>
          </item>
