--- a/src/controller/controllerdialog.ui
+++ b/src/controller/controllerdialog.ui
@@ -74,7 +74,7 @@
             <x>0</x>
             <y>0</y>
             <width>387</width>
-            <height>1881</height>
+            <height>1931</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
@@ -92,6 +92,51 @@
              <property name="autoDefault">
               <bool>false</bool>
              </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QGroupBox" name="styleGroupBox">
+             <property name="title">
+              <string>Style</string>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_17">
+              <property name="margin">
+               <number>4</number>
+              </property>
+              <property name="spacing">
+               <number>4</number>
+              </property>
+              <item row="0" column="0">
+               <widget class="QPushButton" name="styleLinuxButton">
+                <property name="text">
+                 <string>Linux</string>
+                </property>
+                <property name="flat">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QPushButton" name="styleWinXPButton">
+                <property name="text">
+                 <string>WinXP</string>
+                </property>
+                <property name="flat">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="2">
+               <widget class="QPushButton" name="styleWin7Button">
+                <property name="text">
+                 <string>Win7</string>
+                </property>
+                <property name="flat">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </widget>
            </item>
            <item>
