--- a/src/controller/controllerdialog.ui
+++ b/src/controller/controllerdialog.ui
@@ -106,7 +106,7 @@
               <property name="spacing">
                <number>4</number>
               </property>
-              <item row="0" column="0">
+              <item row="0" column="1">
                <widget class="QPushButton" name="styleLinuxButton">
                 <property name="text">
                  <string>Linux</string>
@@ -116,7 +116,7 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="1">
+              <item row="0" column="2">
                <widget class="QPushButton" name="styleWinXPButton">
                 <property name="text">
                  <string>WinXP</string>
@@ -126,10 +126,20 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="2">
+              <item row="0" column="3">
                <widget class="QPushButton" name="styleWin7Button">
                 <property name="text">
                  <string>Win7</string>
+                </property>
+                <property name="flat">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QPushButton" name="styleSimpleButton">
+                <property name="text">
+                 <string>Simple</string>
                 </property>
                 <property name="flat">
                  <bool>true</bool>
