--- a/examples/VsTableWidget/mainwindow.ui
+++ b/examples/VsTableWidget/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1024</width>
+    <height>768</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,6 +23,13 @@
     </property>
     <item>
      <widget class="QTabWidget" name="mainTabWidget">
+      <property name="currentIndex">
+       <number>-1</number>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QTabWidget" name="cloneTabWidget">
       <property name="currentIndex">
        <number>-1</number>
       </property>
