Cell border color

--- a/src/controller/controllerdialog.ui
+++ b/src/controller/controllerdialog.ui
@@ -72,9 +72,9 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-600</y>
+            <y>-127</y>
             <width>387</width>
-            <height>2052</height>
+            <height>2133</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
@@ -605,7 +605,7 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0">
+             <item row="5" column="0">
               <widget class="QPushButton" name="horizontalDefaultBackgroundButton">
                <property name="text">
                 <string>Default background color in horizontal header</string>
@@ -615,7 +615,7 @@
                </property>
               </widget>
              </item>
-             <item row="5" column="0">
+             <item row="6" column="0">
               <widget class="QPushButton" name="horizontalDefaultForegroundButton">
                <property name="text">
                 <string>Default foreground color in horizontal header</string>
@@ -625,7 +625,7 @@
                </property>
               </widget>
              </item>
-             <item row="6" column="0">
+             <item row="7" column="0">
               <widget class="QPushButton" name="horizontalGridColorButton">
                <property name="text">
                 <string>Grid color in horizontal header</string>
@@ -635,7 +635,7 @@
                </property>
               </widget>
              </item>
-             <item row="7" column="0">
+             <item row="9" column="0">
               <widget class="QPushButton" name="verticalDefaultBackgroundButton">
                <property name="text">
                 <string>Default background color in vertical header</string>
@@ -645,7 +645,7 @@
                </property>
               </widget>
              </item>
-             <item row="8" column="0">
+             <item row="10" column="0">
               <widget class="QPushButton" name="verticalDefaultForegroundButton">
                <property name="text">
                 <string>Default foreground color in vertical header</string>
@@ -655,7 +655,7 @@
                </property>
               </widget>
              </item>
-             <item row="9" column="0">
+             <item row="11" column="0">
               <widget class="QPushButton" name="verticalGridColorButton">
                <property name="text">
                 <string>Grid color in vertical header</string>
@@ -665,7 +665,7 @@
                </property>
               </widget>
              </item>
-             <item row="10" column="0">
+             <item row="13" column="0">
               <widget class="QPushButton" name="selectionColorButton">
                <property name="text">
                 <string>Selection color</string>
@@ -675,10 +675,40 @@
                </property>
               </widget>
              </item>
-             <item row="11" column="0">
+             <item row="14" column="0">
               <widget class="QPushButton" name="selectionTextColorButton">
                <property name="text">
                 <string>Selection text color</string>
+               </property>
+               <property name="autoDefault">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <widget class="QPushButton" name="cellBorderColorButton">
+               <property name="text">
+                <string>Cell border color</string>
+               </property>
+               <property name="autoDefault">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="0">
+              <widget class="QPushButton" name="horizontalCellBorderColorButton">
+               <property name="text">
+                <string>Cell border color in horizontal header</string>
+               </property>
+               <property name="autoDefault">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="12" column="0">
+              <widget class="QPushButton" name="verticalCellBorderColorButton">
+               <property name="text">
+                <string>Cell border color in vertical header</string>
                </property>
                <property name="autoDefault">
                 <bool>false</bool>
