--- a/src/controller/controllerdialog.ui
+++ b/src/controller/controllerdialog.ui
@@ -74,7 +74,7 @@
             <x>0</x>
             <y>0</y>
             <width>387</width>
-            <height>2816</height>
+            <height>2871</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
@@ -490,6 +490,20 @@
             </widget>
            </item>
            <item>
+            <widget class="Line" name="line_12">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="alternatingRowColorsCheckBox">
+             <property name="text">
+              <string>Alternating row colors</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="Line" name="line_7">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -575,7 +589,7 @@
              <property name="spacing">
               <number>4</number>
              </property>
-             <item row="11" column="0">
+             <item row="12" column="0">
               <widget class="QPushButton" name="verticalDefaultForegroundButton">
                <property name="text">
                 <string>Default foreground color in vertical header</string>
@@ -585,7 +599,7 @@
                </property>
               </widget>
              </item>
-             <item row="12" column="0">
+             <item row="13" column="0">
               <widget class="QPushButton" name="verticalGridColorButton">
                <property name="text">
                 <string>Grid color in vertical header</string>
@@ -595,7 +609,7 @@
                </property>
               </widget>
              </item>
-             <item row="14" column="0">
+             <item row="15" column="0">
               <widget class="QPushButton" name="selectionColorButton">
                <property name="text">
                 <string>Selection color</string>
@@ -605,7 +619,7 @@
                </property>
               </widget>
              </item>
-             <item row="15" column="0">
+             <item row="16" column="0">
               <widget class="QPushButton" name="selectionTextColorButton">
                <property name="text">
                 <string>Selection text color</string>
@@ -615,7 +629,7 @@
                </property>
               </widget>
              </item>
-             <item row="5" column="0">
+             <item row="6" column="0">
               <widget class="QPushButton" name="cellBorderColorButton">
                <property name="text">
                 <string>Cell border color</string>
@@ -625,7 +639,7 @@
                </property>
               </widget>
              </item>
-             <item row="9" column="0">
+             <item row="10" column="0">
               <widget class="QPushButton" name="horizontalCellBorderColorButton">
                <property name="text">
                 <string>Cell border color in horizontal header</string>
@@ -635,7 +649,7 @@
                </property>
               </widget>
              </item>
-             <item row="13" column="0">
+             <item row="14" column="0">
               <widget class="QPushButton" name="verticalCellBorderColorButton">
                <property name="text">
                 <string>Cell border color in vertical header</string>
@@ -645,7 +659,7 @@
                </property>
               </widget>
              </item>
-             <item row="7" column="0">
+             <item row="8" column="0">
               <widget class="QPushButton" name="horizontalDefaultForegroundButton">
                <property name="text">
                 <string>Default foreground color in horizontal header</string>
@@ -655,7 +669,7 @@
                </property>
               </widget>
              </item>
-             <item row="8" column="0">
+             <item row="9" column="0">
               <widget class="QPushButton" name="horizontalGridColorButton">
                <property name="text">
                 <string>Grid color in horizontal header</string>
@@ -665,7 +679,7 @@
                </property>
               </widget>
              </item>
-             <item row="10" column="0">
+             <item row="11" column="0">
               <widget class="QPushButton" name="verticalDefaultBackgroundButton">
                <property name="text">
                 <string>Default background color in vertical header</string>
@@ -675,7 +689,7 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
+             <item row="2" column="0">
               <widget class="QPushButton" name="defaultBackgroundButton">
                <property name="text">
                 <string>Default background color</string>
@@ -685,7 +699,7 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="0">
+             <item row="4" column="0">
               <widget class="QPushButton" name="defaultForegroundButton">
                <property name="text">
                 <string>Default foreground color</string>
@@ -695,7 +709,7 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0">
+             <item row="5" column="0">
               <widget class="QPushButton" name="gridColorButton">
                <property name="text">
                 <string>Grid color</string>
@@ -705,7 +719,7 @@
                </property>
               </widget>
              </item>
-             <item row="6" column="0">
+             <item row="7" column="0">
               <widget class="QPushButton" name="horizontalDefaultBackgroundButton">
                <property name="text">
                 <string>Default background color in horizontal header</string>
@@ -715,10 +729,20 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
+             <item row="3" column="0">
               <widget class="QPushButton" name="alternateBackgroundButton">
                <property name="text">
                 <string>Alternate background color</string>
+               </property>
+               <property name="autoDefault">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QPushButton" name="windowColorButton">
+               <property name="text">
+                <string>Window color</string>
                </property>
                <property name="autoDefault">
                 <bool>false</bool>
