--- a/src/controller/controllerdialog.ui
+++ b/src/controller/controllerdialog.ui
@@ -2911,6 +2911,9 @@
               </item>
               <item>
                <layout class="QGridLayout" name="gridLayout_18">
+                <property name="spacing">
+                 <number>4</number>
+                </property>
                 <item row="0" column="0">
                  <widget class="QPushButton" name="horizontalMergeButton">
                   <property name="text">
@@ -3196,6 +3199,12 @@
      </widget>
      <widget class="QWidget" name="createPage">
       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="spacing">
+        <number>4</number>
+       </property>
+       <property name="margin">
+        <number>4</number>
+       </property>
        <item>
         <widget class="QLabel" name="selectTableLabel">
          <property name="font">
@@ -3212,15 +3221,56 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_9">
+         <property name="spacing">
+          <number>4</number>
+         </property>
+         <item row="1" column="2">
+          <widget class="QPushButton" name="createFastTablePersonalButton">
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>FastTableWidget without internal data</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QPushButton" name="createCustomTablePersonalButton">
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>CustomFastTableWidget without internal data</string>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QPushButton" name="createCustomTableButton">
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="text">
             <string>CustomFastTableWidget</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
+         <item row="0" column="2">
           <widget class="QPushButton" name="createFastTableButton">
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="text">
             <string>FastTableWidget</string>
            </property>
